	* More camel-folder-summary.c memory corruption bugfixes 
	* Added for-now unstable camel-lite API: camel_store_get_recent_messages
	Do not yet use this API, unless you want to screwup your IMAP
	connection significantly enough to make using tinymail impossible.
	* Several bugfixes in CamelImapFolder
	* Invalid UTF-8 in TnyGtkTextBufferStream solution

2007-01-21  Philip Van Hoof <pvanhoof@gnome.org>

	* Preperation for notification of changes in folders, mostly bugfixes
	* Important bugfix for camel-folder-summary.c when creating new
	CamelMessageInfo instances without having a summary instance (the size
	was too small)
	* Compile with -DIM_TESTING in the CFLAGS to see the TnyFolderMonitor
	in action already

2007-01-19  Philip Van Hoof <pvanhoof@gnome.org>

	* Preparations for notification of changes in folders

2007-01-17  Philip Van Hoof <pvanhoof@gnome.org>

	* Introduction of TnyFolderChange, TnyFolderObserver, TnyFolderMonitor
	* Updated Python bindings

	* This was a major API change in all

2007-01-17  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c: fixed a bug in folder renaming
	* libtinymailui-gtk/tny-gtk-msg-view.c: added a missing macro in a
	function call
	* libtinymailui/tny-msg-view.c: added tny_msg_view_clear prototype to
	the header file

2007-01-16  Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>

	* Added the MESSAGE_SIZE column to the TnyGtkHeaderListModel

	* This was a API change in libtinymailui-gtk

2007-01-16  Philip Van Hoof <pvanhoof@gnome.org>

	* Preparations for size limited retrieval
	* Major refactoring for the flags of messages
	* Support for the size attribute in TnyHeader on IMAP
	* Support for the size attribute in TnyHeader on POP
	* More precision in the status handling (for progressbars). No more
	percentages but actual "sofar" and "oftotal" numbers
	
	* This was a major API change in camel-lite
	* This was a major API change in all
	* This change influenced the on-disk cache
